2018-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Report a useful exception for
	the case when the JNG file fails to provide the necessary image
	chunks to allocate the color image.  Inspired by oss-fuzz 8666
	"graphicsmagick/coder_JNG_fuzzer: ASSERT: data != (const char *)
	NULL" although the reported issue was not reproduced.

2018-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Fix off-by-one in length validation
	for TERM chunk which allowed one byte heap read overflow.  Fixes
	oss-fuzz 8615 "graphicsmagick/coder_MNG_fuzzer:
	Heap-buffer-overflow in mng_get_long". (Credit to OSS-Fuzz)
	(ReadMNGImage): Fix leak of MngInfo in error reporting path.
	Fixes oss-fuzz 8604 "graphicsmagick/coder_MNG_fuzzer: Direct-leak
	in ReadMNGImage". (Credit to OSS-Fuzz)
	(ReadMNGImage): Verify that claimed chunk size does not exceed
	input size.  Fixes oss-fuzz 8564 "graphicsmagick/coder_MNG_fuzzer:
	Out-of-memory in graphicsmagick_coder_MNG_fuzzer". (Credit to
	OSS-Fuzz)

	* coders/tiff.c (ReadTIFFImage): Reject files with excessive
	samples-per-pixel or extra-samples. Avoids potential issues
	observed in oss-fuzz 8634 "graphicsmagick/coder_BIGTIFF_fuzzer:
	Undefined-shift in ImportAlphaQuantumType". (Credit to OSS-Fuzz)

2018-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Assure that object id index is
	always less than MNG_MAX_OBJECTS to avoid overflow.  Fixes
	oss-fuzz 8596 "graphicsmagick/coder_MNG_fuzzer:
	Index-out-of-bounds in ReadMNGImage" and likely other issues yet
	to be reported. (Credit to OSS-Fuzz)

2018-05-30  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* magick/render.c (CompareEdges): Per ticket #562,
	function CompareEdges() did not conform to the qsort()
	requirement that if CompareEdges(edge0,edge1) returns
	-1 (i.e., edge0 "less than" edge1), then
	CompareEdges(edge1,edge0) should return 1 (edge1