@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180601"
-#define public MagickPackageReleaseDate "snapshot-20180601"
+#define public MagickPackageVersionAddendum ".020180602"
+#define public MagickPackageReleaseDate "snapshot-20180602"
